--- a/docs/.gitignore
+++ b/docs/.gitignore
@@ -15,6 +15,7 @@ apache-airflow-providers-apache-pig
 apache-airflow-providers-apache-pinot
 apache-airflow-providers-apache-spark
 apache-airflow-providers-apprise
+apache-airflow-providers-arangodb
 apache-airflow-providers-asana
 apache-airflow-providers-atlassian-jira
 apache-airflow-providers-celery
