move apache.impala provider to new provider structure

--- a/pyproject.toml
+++ b/pyproject.toml
@@ -631,6 +631,7 @@ dev = [
   "apache-airflow-providers-apache-druid",
   "apache-airflow-providers-apache-hive",
   "apache-airflow-providers-apache-iceberg",
+  "apache-airflow-providers-apache-impala",
   "apache-airflow-providers-apache-kafka",
   "apache-airflow-providers-apache-kylin",
   "apache-airflow-providers-apache-livy",
@@ -717,6 +718,7 @@ apache-airflow-providers-apache-drill = { workspace = true }
 apache-airflow-providers-apache-druid = { workspace = true }
 apache-airflow-providers-apache-hive = { workspace = true }
 apache-airflow-providers-apache-iceberg = {workspace = true}
+apache-airflow-providers-apache-impala = { workspace = true }
 apache-airflow-providers-apache-kafka = { workspace = true }
 apache-airflow-providers-apache-kylin = { workspace = true }
 apache-airflow-providers-apache-livy = { workspace = true }
@@ -801,6 +803,7 @@ members = [
     "providers/apache/druid",
     "providers/apache/hive",
     "providers/apache/iceberg",
+    "providers/apache/impala",
     "providers/apache/kafka",
     "providers/apache/kylin",
     "providers/apache/livy",
