--- a/.github/boring-cyborg.yml
+++ b/.github/boring-cyborg.yml
@@ -59,9 +59,7 @@ labelPRBasedOnFilePath:
     - providers/apache/iceberg/**
 
   provider:apache-impala:
-    - providers/src/airflow/providers/apache/impala/**/*
-    - docs/apache-airflow-providers-apache-impala/**/*
-    - providers/tests/apache/impala/**/*
+    - providers/apache/impala/**
 
   provider:apache-kafka:
     - providers/apache/kafka/**
